--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="index.css">
   <head>
     <meta charset="utf-8">
     <style>
@@ -7,5 +9,26 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <img src="me.jpg">
+      <h1>Bradley Palmer</h1>
+    </header>
+    <h2>WDD 230: Assignment Portal</h2>
+    <ul>
+      <li>Lesson 02: <a href="">Link</a></li>
+      <li>Lesson 03: <a href="">Link</a></li>
+      <li>Lesson 04: <a href="">Link</a></li>
+      <li>Lesson 05: <a href="">Link</a></li>
+      <li>Lesson 06: <a href="">Link</a></li>
+      <li>Lesson 07: <a href="">Link</a></li>
+      <li>Lesson 08: <a href="">Link</a></li>
+      <li>Lesson 09: <a href="">Link</a></li>
+      <li>Lesson 10: <a href="">Link</a></li>
+      <li>Lesson 11: <a href="">Link</a></li>
+    </ul>
+    <footer>
+      <h1>&copy; .:|:. Bradley Palmer .:|:. Idaho</h1>
+      <p id="cal"></p>
+    </footer>
   </body>
 </html>
