--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <h2>WDD 230: Assignment Portal</h2>
     <ul>
+      <!-- This is a test to see if this edit works. -->
       <li>Lesson 02: <a href="">Link</a></li>
       <li>Lesson 03: <a href="">Link</a></li>
       <li>Lesson 04: <a href="">Link</a></li>
