--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <script src="index.js"></script>
-  <link rel="stylesheet" href="index.css">
+  <script src="js/index.js"></script>
+  <link rel="stylesheet" href="css/index.css">
   <head>
     <meta charset="utf-8">
     <style>
