--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    <div class="main-div">
+    <div class="main-grid">
     <header>
         
         <h1>Design Principles Document</h1>
