--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      
       <!-- This is a test to see if this edit works. -->
 
-      <li>Lesson 02: <a href="">Link</a></li>
+      <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
       <li>Lesson 03: <a href="">Link</a></li>
       <li>Lesson 04: <a href="">Link</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
