--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -17,7 +17,9 @@
     
 
 
-    <img src="amazon_shot.jpg">
+    <img src="./amazon_shot.jpg" alt="Amazon">
+    <img src="./github_pic.jpg" alt="GitHub">
+    <img src="./church_site.jpg" alt="Church of Jesus Christ of Latter-Day Saints">
     
 </div>
 
