--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -17,9 +17,38 @@
     
 
 
-    <img src="./amazon_shot.jpg" alt="Amazon">
-    <img src="./github_pic.jpg" alt="GitHub">
-    <img src="./church_site.jpg" alt="Church of Jesus Christ of Latter-Day Saints">
+    <section>
+        <h2>Contrast: Amazon</h2>
+        <img src="./amazon_shot.jpg" alt="Amazon">
+        <p>Amazon has good contrast in its uses of text color and background color together. 
+            The contrast helps to draw your eye to specific points on the screen. 
+            This is very beneficial for Amazon as it is an eshop and so wants to draw attention to products. 
+            Thankfully, the attention drawing is done with good, eye catching contrast. 
+            There are some sites that use colors that clash, and that makes it look so much worse. <br>
+            <a href="www.amazon.com">Amazon Home Page</a>
+        </p>
+    </section>
+    <section>
+        <h3>Repetition: GitHub</h3>
+        <img src="./github_pic.jpg" alt="GitHub">
+        <p>
+            Repetition gives a clean, consistent layout to a website. 
+            GitHub has a good layout that shows the connection to everything on their site. 
+            The look for repositories and the two activities sections are very similar. 
+            This helps show a good layout of the page and gives clear navigation. 
+            It also gives a good consistent look to the site. 
+            <a href="www.github.com">GitHub</a>
+        </p>
+    </section>
+    <section>
+        <h3>Alignment: Church of Jesus Christ</h3>
+        <img src="./church_site.jpg" alt="Church of Jesus Christ of Latter-Day Saints">
+        <p>
+            The Church's webiste has clean alignment. They have the menu tools aligned well as well as the various images
+            and videos. This is really nice for the user to help them in navigation around the site. 
+            Having everything lined up makes the site much more pleasent to look at as well as helping with reading the site.
+        </p>
+    </section>
     
 </div>
 
