--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -47,6 +47,7 @@
             The Church's webiste has clean alignment. They have the menu tools aligned well as well as the various images
             and videos. This is really nice for the user to help them in navigation around the site. 
             Having everything lined up makes the site much more pleasent to look at as well as helping with reading the site.
+            <a href="www.lds.org">Church of Jesus Christ</a>
         </p>
     </section>
     
