--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
 
      
-      <!-- This is a test to see if this edit works. -->
+      <!-- This is a test to see if this edit works. Hello There! -->
 
       <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
       <li>Lesson 03: <a href="">Link</a></li>
