--- a/lesson03/site-plan.html
+++ b/lesson03/site-plan.html
@@ -16,6 +16,15 @@
     </ul>
 </header>
 <body>
-    
+    <h2>Logo</h2>
+    <div class="logo-img">
+        <img src="./Gotham.png" alt="Gotham City Commerce Logo">
+    </div>
+    <h3>Domain Name: </h3>
+    <p>gothamcitycommerce.com</p>
+    <h4>Site Purpose</h4>
+    <p>
+        
+    </p>
 </body>
 </html>
