--- a/lesson03/site-plan.html
+++ b/lesson03/site-plan.html
@@ -24,7 +24,10 @@
     <p>gothamcitycommerce.com</p>
     <h4>Site Purpose</h4>
     <p>
-        
+        Welcome to the site plan for Gotham City's Chamber of Commerce. Our city may not have the greatest of histories,
+        but we are on the up and up. We believe that we have earned your buisness now and want to show you that.
+        We are seeking to bring great buisnesses to our wonderful city. We have a vibrant night life that you can add too.
+        So welcome to our site plan, we hope you visit our full website. 
     </p>
 </body>
 </html>
