--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="./css/site-plan.css">
     <title>Chamber Target Audience</title>
 </head>
+<header>
+    <h1>Gotham City Chamber of Commerce</h1>
+    <h2>Target Audience</h2>
+    <ul>
+        <li><a href="./site-plan.html">Site Plan</a></li>
+        <li><a href="./color-scheme.html">Color Scheme</a></li>
+        <li><a href="./typography.html">Typography</a></li>
+    </ul>
+</header>
 <body>
-    
+    <div class="bruce">
+        <h3>Bruce Wayne</h3>
+        <img src="./pics/bruce-wayne.jpeg" alt="Bruce Wayne">
+    </div>
+    <div class="lex">
+        <h4>Lex Luthor</h4>
+        <img src="./pics/lex-luthor.jpeg" alt="Lex Luthor">
+    </div>
 </body>
 </html>
