--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="./css/site-plan.css">
     <title>Chamber Color Scheme</title>
 </head>
+<header>
+    <h1>Gotham City Chamber of Commerce</h1>
+    <h2>Color Scheme</h2>
+    <ul>
+        <li><a href="./site-plan.html">Site Plan</a></li>
+        <li><a href="./target-audience.html">Target Audience</a></li>
+        <li><a href="./typography.html">Typography</a></li>
+    </ul>
+</header>
 <body>
-    
+    <div class="primary">
+        <h3>This is the first color</h3>
+    </div>
+    <div class="secondary">
+        <h4>This is the second color</h4>
+    </div>
+    <div class="color3">
+        <h5>This is the third color</h5>
+    </div>
+    <div class="color4">
+        <h6>This is the fourth color</h6>
+    </div>
 </body>
 </html>
