--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -8,6 +8,9 @@
     <title>Chamber Typography</title>
 </head>
 <body>
-    
+    <p style="font-family: 'Times New Roman';">
+        This is an example of the simple Times New Roman font that we will be using for our site. 
+        It may be basic and simple, but it is easy to read and the prefered font of our designer. 
+    </p>
 </body>
 </html>
