--- a/lesson03/site-plan.html
+++ b/lesson03/site-plan.html
@@ -15,7 +15,7 @@
         <li><a href="./typography.html">Typography</a></li>
     </ul>
 </header>
-<body>
+<body class="home-page">
     <h2>Logo</h2>
     <div class="logo-img">
         <img src="./Gotham.png" alt="Gotham City Commerce Logo">
