--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -16,14 +16,32 @@
         <li><a href="./typography.html">Typography</a></li>
     </ul>
 </header>
-<body>
+<body class="home-page">
     <div class="bruce">
-        <h3>Bruce Wayne</h3>
         <img src="./pics/bruce-wayne.jpeg" alt="Bruce Wayne">
-    </div>
+        <p>
+            <strong>Bruce Wayne</strong> <br>
+            Profession: CEO of Wayne Enterprises. <br>
+            Interests: Investments, Buisness Expansion, Always Looking for New Ideas <br>
+            Home City: Gotham City
+        </p>
+    </div> <br>
     <div class="lex">
-        <h4>Lex Luthor</h4>
         <img src="./pics/lex-luthor.jpeg" alt="Lex Luthor">
+        <p>
+            <strong>Lex Luthor</strong> <br>
+            Profession: CEO of Lexcorp <br>
+            Interests: New Money Making Opportunites, Buisness Expansion, Superman <br>
+            Home City: Metropolis 
+        </p>
     </div>
+    <p>
+        Scenarios: <br>
+        Is there room for expansion? <br>
+        Is the area dangerous? <br>
+        What is the local clientel like? <br>
+        Potential investments in the area? <br>
+        
+    </p>
 </body>
 </html>
