--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="./css/site-plan.css">
     <title>Chamber Typography</title>
 </head>
-<body>
+<header>
+    <h1>Gotham City Chamber of Commerce</h1>
+    <h2>Typography</h2>
+    <ul>
+        <li><a href="./site-plan.html">Site Plan</a></li>
+        <li><a href="./color-scheme.html">Color Scheme</a></li>
+        <li><a href="./target-audience.html">Target Audience</a></li>
+    </ul>
+</header>
+<body class="home-page">
     <p style="font-family: 'Times New Roman';">
         This is an example of the simple Times New Roman font that we will be using for our site. 
         It may be basic and simple, but it is easy to read and the prefered font of our designer. 
