--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/chamber.css">
     <title>Chamber Home Page</title>
 </head>
 <header>
-
+<h1>Gotham City Chamber of Commerce</h1>
+<img src="../lesson03/Gotham.png" alt="Commerce Logo">
+<nav class="nav-bar">
+    <ul>
+        <li><a href=""></a>Page One</li>
+        <li><a href=""></a>Page Two</li>
+        <li><a href=""></a>Page Three</li>
+        <li><a href=""></a>Page Four</li>
+    </ul>
+</nav>
 </header>
 <body>
     
 </body>
 <footer>
-    
+
 </footer>
 </html>
