--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="./css/chamber.css">
     <title>Chamber Home Page</title>
 </head>
-<header>
-<h1>Gotham City Chamber of Commerce</h1>
-<img src="../lesson03/Gotham.png" alt="Commerce Logo">
-<nav class="nav-bar">
-    <ul>
-        <li><a href=""></a>Page One</li>
-        <li><a href=""></a>Page Two</li>
-        <li><a href=""></a>Page Three</li>
-        <li><a href=""></a>Page Four</li>
-    </ul>
-</nav>
-</header>
-<body>
-    
-</body>
-<footer>
 
-</footer>
+<body>
+    <header>
+        <h1>Gotham City Chamber of Commerce</h1>
+        <img src="../lesson03/Gotham.png" alt="Commerce Logo">
+        <nav class="nav-bar">
+            <ul>
+                <li><a href=""></a>Page One</li>
+                <li><a href=""></a>Page Two</li>
+                <li><a href=""></a>Page Three</li>
+                <li><a href=""></a>Page Four</li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+
+    </main>
+    <footer>
+        <p>&copy2022 | Bradley Palmer | WDD 230 Project| </p>
+    </footer>
+</body>
+
 </html>
