--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/chamber.css">
+    <script src="./js/chamber.js"></script>
     <title>Chamber Home Page</title>
 </head>
 
@@ -14,18 +15,39 @@
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <nav class="nav-bar">
             <ul>
-                <li><a href=""></a>Page One</li>
-                <li><a href=""></a>Page Two</li>
-                <li><a href=""></a>Page Three</li>
-                <li><a href=""></a>Page Four</li>
+                <li><a href="">Page One</a></li>
+                <li><a href="">Page Two</a></li>
+                <li><a href="">Page Three</a></li>
+                <li><a href="">Page Four</a></li>
             </ul>
         </nav>
+        
     </header>
     <main class="main">
+        <section>
+            Hero with site name and call to action
+        </section>
+        <section>
+            Events
+        </section>
+        <section>
+            Weather
+        </section>
+        <section>
+            News Release
+        </section>
+        <div class="spotlight">
+            <section>
+                Spotlight 1
+            </section>
+            <section>
+                Spotlight 2
+            </section>
 
+        </div>
     </main>
     <footer>
-        <p>&copy2022 | Bradley Palmer | WDD 230 Project| </p>
+        <p>&copy2022 | Bradley Palmer | WDD 230 Project | <div class="date"></div></p>
     </footer>
 </body>
 
