--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- This is a test to see if this edit works. Hello There! -->
 
       <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
-      <li>Lesson 03: <a href="./lesson03/site-plan.html">Link</a>Site Plan</li>
+      <li>Lesson 03: <a href="./lesson03/site-plan.html">Site Plan</a></li>
       <li>Lesson 04: <a href="./chamber/index.html">Gotham Home Page</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
