--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,23 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/chamber.css">
-    <script src="./js/chamber.js"></script>
     <title>Chamber Home Page</title>
 </head>
 
 <body>
     <header>
+        <div class="logo-area">
+            <a href="./index.html">
+                <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <h1>Gotham City Chamber of Commerce</h1>
-        <img src="../lesson03/Gotham.png" alt="Commerce Logo">
+    </a>
+    </div>
         <nav class="nav-bar">
+            <div class="header-social">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
+            </div>
             <ul>
-                <li><a href="">Page One</a></li>
-                <li><a href="">Page Two</a></li>
-                <li><a href="">Page Three</a></li>
-                <li><a href="">Page Four</a></li>
+                <li><a href="./">Page One</a></li>
+                <li><a href="./">Page Two</a></li>
+                <li><a href="./">Page Three</a></li>
+                <li><a href="./">Page Four</a></li>
             </ul>
         </nav>
-        
+        <div class="date"></div>
     </header>
     <main class="main">
         <section>
@@ -47,8 +53,9 @@
         </div>
     </main>
     <footer>
-        <p>&copy2022 | Bradley Palmer | WDD 230 Project | <div class="date"></div></p>
+        <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
     </footer>
+    <script src="./js/chamber.js"></script>
 </body>
 
 </html>
