--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/chamber.css">
-    <link rel="stylesheet" href="./css/medium.css">
-    <link rel="stylesheet" href="./css/large.css">
-    <title>Chamber Home Page</title>
+    <title>Join Page</title>
 </head>
-
 <body>
     <header>
         <div class="logo-area">
@@ -21,10 +18,9 @@
         <nav class="nav-bar">
             <div class="header-social">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
-                <a href="https://www.twitter.com"><img src=.images/twitter.jpeg" alt=""></a>
             </div>
             <ul>
-                <li><a href="./">Page One</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./">Page Two</a></li>
                 <li><a href="./">Page Three</a></li>
                 <li><a href="./">Page Four</a></li>
@@ -32,33 +28,13 @@
         </nav>
         <div class="date"></div>
     </header>
-    <main class="main">
-        <section>
-            Hero with site name and call to action
-        </section>
-        <section>
-            Events
-        </section>
-        <section>
-            Weather
-        </section>
-        <section>
-            News Release
-        </section>
-        <div class="spotlight">
-            <section>
-                Spotlight 1
-            </section>
-            <section>
-                Spotlight 2
-            </section>
-
-        </div>
+    <main>
+        <form action="./thankyou.html">
+            
+        </form>
     </main>
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
     </footer>
-    <script src="./js/chamber.js"></script>
 </body>
-
 </html>
