--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,10 +21,10 @@
         <nav class="nav-bar">
             <div class="header-social">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
-                <a href="https://www.twitter.com"><img src=.images/twitter.jpeg" alt=""></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
             <ul>
-                <li><a href="./">Page One</a></li>
+                <li><a href="./join.html">Join</a></li>
                 <li><a href="./">Page Two</a></li>
                 <li><a href="./">Page Three</a></li>
                 <li><a href="./">Page Four</a></li>
