--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/chamber.css">
+    <link rel="stylesheet" href="./css/medium.css">
+    <link rel="stylesheet" href="./css/large.css">
     <title>Join Page</title>
 </head>
 <body>
@@ -30,7 +32,7 @@
     </header>
     <main>
         <form action="./thankyou.html">
-            
+
         </form>
     </main>
     <footer>
