--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,23 +33,23 @@
         <div class="date"></div>
     </header>
     <main class="main">
-        <section>
+        <section id="hero">
             Hero with site name and call to action
         </section>
-        <section>
+        <section id="events">
             Events
         </section>
-        <section>
+        <section id="weather">
             Weather
         </section>
         <section>
             News Release
-        </section>
+        </section id="spotlight">
         <div class="spotlight">
             <section>
                 Spotlight 1
             </section>
-            <section>
+            <section class="spot2">
                 Spotlight 2
             </section>
 
