--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,7 +23,7 @@
             </div>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./directory.html">Directory</a></li>
+                <li><a href="./join.html">Join</a></li>
                 <li><a href="./">Page Three</a></li>
                 <li><a href="./">Page Four</a></li>
             </ul>
@@ -31,9 +31,7 @@
         <div class="date"></div>
     </header>
     <main>
-        <form action="./thankyou.html">
-
-        </form>
+       
     </main>
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
