--- a/activity09/prophets.html
+++ b/activity09/prophets.html
@@ -8,7 +8,15 @@
     <title>Prophets List</title>
 </head>
 <body>
-    <div id="prophets"></div>
+    <header>
+        <h1>Latter-day Prophets</h1>
+      </header>
+      <main>
+        <div class="cards"></div>
+      </main>
+      <footer>
+        Bradley Palmer | 🏛 BYU-Idaho | WDD 230
+      </footer>
     <script src="./prophets.js"></script>
 </body>
 </html>
