--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
       <li>Lesson 08: <a href="">Link</a></li>
-      <li>Lesson 09: <a href="">Link</a></li>
+      <li>Lesson 09: <a href="./activity09/prophets.html">Prophets Activity</a></li>
       <li>Lesson 10: <a href="">Link</a></li>
       <li>Lesson 11: <a href="">Link</a></li>
     </ul>
