--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,6 +41,9 @@
         </section>
         <section id="weather">
             Weather
+            <p>The current temperature in Gotham City is <span id="curr-temp"></span>&deg;F</p>
+            <span id="cond"></span></p>
+            <img src=""id="weather-icon"></p>
         </section>
         <section>
             News Release
