--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,8 +30,17 @@
         </nav>
         <div class="date"></div>
     </header>
-    <main>
+    <main class="join-form">
         <form action="./thankyou.html">
+            <label for="firstName">First Name: </label>
+            <input type="text" name="firstName" id="firstName" required><br>
+            <label for="lastName">Last Name: </label>
+            <input type="text" name="lastName" id="lastName" required><br>
+            <label for="position">Business Position: </label>
+            <input type="text" name="position" id="position"><br>
+            <label for="mail">Email: </label>
+            <input type="email" name="mail" id="mail" placeholder="example@me.com" required><br>
+            
 
         </form>
     </main>
