--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,9 +59,11 @@
         </div>
     </main>
     <footer>
-        <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
+        <p>&copy2022 | Bradley Palmer | WDD 230 Project | Weather data provided by 
+            <a href="https://openweathermap.org/">Open Weather Map API</a></p>
     </footer>
     <script src="./js/chamber.js"></script>
+    <script src="./js/weather.js"></script>
 </body>
 
 </html>
