--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,7 +40,9 @@
             <input type="text" name="position" id="position"><br>
             <label for="mail">Email: </label>
             <input type="email" name="mail" id="mail" placeholder="example@me.com" required><br>
-            
+            <label for="phone">Phone Number: </label>
+            <input type="tel" name="phone" id="phone" placeholder="123-456-7890" required>
+
 
         </form>
     </main>
