--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="./css/chamber.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
@@ -25,9 +26,9 @@
             </div>
             <ul>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="./">Page Two</a></li>
-                <li><a href="./">Page Three</a></li>
-                <li><a href="./">Page Four</a></li>
+                <li><a href="./directory.html">Directory</a></li>
+                <li><a href="./">Discover</a></li>
+                <li><a href="./">Contact</a></li>
             </ul>
         </nav>
         <div class="date"></div>
@@ -59,6 +60,7 @@
         </div>
     </main>
     <footer>
+        <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | Weather data provided by 
             <a href="https://openweathermap.org/">Open Weather Map API</a></p>
     </footer>
