--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,6 +45,7 @@
             <p>The current temperature in Gotham City is <span id="curr-temp"></span>&deg;F</p>
             <span id="cond"></span></p>
             <img src=""id="weather-icon"></p>
+            <span id="speed"></span>
         </section>
         <section>
             News Release
