--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
                 <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
-            <ul>
+            <ul class="navigation">
                 <li><a href="./join.html">Join</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./">Discover</a></li>
