--- a/chamber/join.html
+++ b/chamber/join.html
@@ -45,7 +45,7 @@
             <label for="business-name">Business Name </label><br>
             <input type="text" name="business-name" id="business-name" required><br>
             <label for="description">Business Description</label><br>
-            <input id="description" type="text" size="50"><br>
+            <textarea id="description" type="text" size="50"></textarea><br>
             <label for="tier">Select Membership Level </label><br>
             <select name="tier" id="tier">
                 <option value="Non-Profit">Non-Profit</option>
