--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/chamber.css">
+    <link rel="stylesheet" href="./css/medium.css">
+    <link rel="stylesheet" href="./css/large.css">
+    <title>Thank You</title>
 </head>
 <body>
-    thank you
+    <header>
+        <div class="logo-area">
+            <a href="./index.html">
+                <img src="../lesson03/Gotham.png" alt="Commerce Logo">
+        <h1>Gotham City Chamber of Commerce</h1>
+    </a>
+    </div>
+        <nav class="nav-bar">
+            <div class="header-social">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
+            </div>
+            <ul class="navigation">
+                <li><a href="./join.html">Join</a></li>
+                <li><a href="./directory.html">Directory</a></li>
+                <li><a href="./">Discover</a></li>
+                <li><a href="./">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="date"></div>
+    </header>
+    <h1>Thank You!</h1>
+    <footer>
+        <img src="../lesson03/Gotham.png" alt="Commerce Logo">
+        <p>&copy2022 | Bradley Palmer | WDD 230 Project | Weather data provided by 
+            <a href="https://openweathermap.org/">Open Weather Map API</a></p>
+    </footer>
 </body>
 </html>
