--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,7 +31,23 @@
         <div class="date"></div>
     </header>
     <main>
-       
+        <h1>Buisness Directory</h1>
+       <div id="directory">
+           <section>
+            
+           </section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+           <section></section>
+       </div>
     </main>
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
