--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,9 +33,7 @@
     <main>
         <h1>Buisness Directory</h1>
        <div id="directory">
-           <section>
-            
-           </section>
+           <section></section>
            <section></section>
            <section></section>
            <section></section>
