--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,22 +33,13 @@
     <main>
         <h1>Buisness Directory</h1>
        <div id="directory">
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
-           <section></section>
+           
        </div>
     </main>
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
     </footer>
+    
 </body>
+<script src="./data.js"></script>
 </html>
