--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/chamber.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
-    <title>Join Page</title>
+    <title>Business Directory</title>
 </head>
 <body>
     <header>
@@ -24,16 +24,22 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="./">Page Three</a></li>
-                <li><a href="./">Page Four</a></li>
+                <li><a href="./">Discover</a></li>
+                <li><a href="./">Contact</a></li>
             </ul>
         </nav>
         <div class="date"></div>
     </header>
     <main>
-        <h1>Buisness Directory</h1>
-       <div id="directory">
-           
+       <h1>Buisness Directory</h1>
+       <div id="directory" class="direct-grid" class="direct-list">
+           <section>
+               <h2>Company Name</h2>
+               <img src="" alt="logo">
+               <p>Address</p>
+               <p>phone number</p>
+               <p>website</p>
+           </section>
        </div>
     </main>
     <footer>
