--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,15 +31,15 @@
         <div class="date"></div>
     </header>
     <main>
-       <h1>Buisness Directory</h1>
+       <h1 id="direct-head">Buisness Directory</h1>
        <div id="directory" class="direct-grid" class="direct-list">
-           <section>
+           <!-- <section>
                <h2>Company Name</h2>
                <img src="" alt="logo">
                <p>Address</p>
                <p>phone number</p>
                <p>website</p>
-           </section>
+           </section> -->
        </div>
     </main>
     <footer>
