--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
     <link rel="stylesheet" href="./css/chamber.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
-    <title>Chamber Home Page</title>
+    <title>Thank You</title>
 </head>
-
 <body>
     <header>
         <div class="logo-area">
@@ -25,48 +23,19 @@
                 <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
             <ul class="navigation">
-                <li><a href="./join.html">Join</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
-                <li><a href="./discover.html">Discover</a></li>
+                <li><a href="./join.html">Join</a></li>
                 <li><a href="./">Contact</a></li>
             </ul>
         </nav>
         <div class="date"></div>
     </header>
-    <main class="main">
-        <section id="hero">
-            Hero with site name and call to action
-        </section>
-        <section id="events">
-            Events
-        </section>
-        <section id="weather">
-            Weather
-            <p>The current temperature in Gotham City is <span id="curr-temp"></span>&deg;F</p>
-            <span id="cond"></span></p>
-            <img src=""id="weather-icon"></p>
-            <span id="speed"></span>
-        </section>
-        <section>
-            News Release
-        </section id="spotlight">
-        <div class="spotlight">
-            <section>
-                Spotlight 1
-            </section>
-            <section class="spot2">
-                Spotlight 2
-            </section>
-
-        </div>
-    </main>
+    <h1>Discover</h1>
     <footer>
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | Weather data provided by 
             <a href="https://openweathermap.org/">Open Weather Map API</a></p>
     </footer>
-    <script src="./js/chamber.js"></script>
-    <script src="./js/weather.js"></script>
 </body>
-
 </html>
