--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/chamber.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
-    <title>Thank You</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -31,8 +31,9 @@
         </nav>
         <div class="date"></div>
     </header>
-    <h1>Discover</h1>
-    
+    <main class="contact-main">
+        <h1>Contact</h1>
+    </main>
     <footer>
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <p>&copy2022 | Bradley Palmer | WDD 230 Project</p>
