--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,6 +32,7 @@
     </header>
     <main>
        <h1 id="direct-head">Buisness Directory</h1>
+       <button type="button" id="myButton" onclick="batman()">Change View</button>
        <div id="directory" class="direct-grid" class="direct-list">
            <!-- <section>
                <h2>Company Name</h2>
