--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -33,6 +33,10 @@
     </header>
     <main class="contact-main">
         <h1>Contact</h1>
+        <div id="firstContact">
+            <h2>Chamber President Benjamin Hill</h2>
+            
+        </div>
     </main>
     <footer>
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
