--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,6 +23,7 @@
                 <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
             <ul class="navigation">
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./join.html">Join</a></li>
@@ -37,5 +38,6 @@
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <p>&copy2022 | Bradley Palmer | WDD 230 Project</p>
     </footer>
+    <script src="./js/chamber.js"></script>
 </body>
 </html>
