--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,6 +25,7 @@
                 <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
             <ul class="navigation">
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./join.html">Join</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./discover.html">Discover</a></li>
