--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,6 +22,7 @@
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
             </div>
             <ul>
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./join.html">Join</a></li>
                 <li><a href="./">Discover</a></li>
@@ -46,7 +47,7 @@
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
     </footer>
-    
+    <script src="./js/chamber.js"></script>
 </body>
 <script src="./data.js"></script>
 </html>
