--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,6 +22,7 @@
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
             </div>
             <ul>
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./">Page Three</a></li>
@@ -59,5 +60,6 @@
     <footer>
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | </p>
     </footer>
+    <script src="./js/chamber.js"></script>
 </body>
 </html>
