--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -23,10 +23,11 @@
                 <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
             </div>
             <ul class="navigation">
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./join.html">Join</a></li>
                 <li><a href="./directory.html">Directory</a></li>
-                <li><a href="./">Discover</a></li>
-                <li><a href="./">Contact</a></li>
+                <li><a href="./discover.html">Discover</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="date"></div>
@@ -37,5 +38,6 @@
         <p>&copy2022 | Bradley Palmer | WDD 230 Project | Weather data provided by 
             <a href="https://openweathermap.org/">Open Weather Map API</a></p>
     </footer>
+    <script src="./js/chamber.js"></script>
 </body>
 </html>
