--- a/chamber/join.html
+++ b/chamber/join.html
@@ -21,7 +21,7 @@
             <div class="header-social">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
             </div>
-            <ul>
+            <ul class="navigation">
                 <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
