--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,6 +20,8 @@
         <nav class="nav-bar">
             <div class="header-social">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
+            </div>
             </div>
             <ul class="navigation">
                 <li><a class="ham" href="#">Menu</a></li>
