--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,8 +27,8 @@
                 <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
-                <li><a href="./">Page Three</a></li>
-                <li><a href="./">Page Four</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./discover.html">Discover</a></li>
             </ul>
         </nav>
         <div class="date"></div>
