--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/chamber.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
-    <title>Thank You</title>
+    <title>Discover</title>
 </head>
 <body>
     <header>
@@ -32,8 +32,20 @@
         </nav>
         <div class="date"></div>
     </header>
+    <main id="discover-main">
     <h1>Discover</h1>
-    
+    <div id="gotham-pics">
+        <section><img src="./images/gotham1.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham2.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham3.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham4.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham5.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham6.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham7.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham8.jpeg" loading="lazy" alt="..." /></section>
+        <section><img src="./images/gotham9.jpeg" loading="lazy" alt="..." /></section>
+    </div>
+    </main>
     <footer>
         <img src="../lesson03/Gotham.png" alt="Commerce Logo">
         <p>&copy2022 | Bradley Palmer | WDD 230 Project</p>
