--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
         <div class="date"></div>
     </header>
     <main id="discover-main">
-    <h1>Discover</h1>
+    <h1>Discover</h1><br>
     <div id="gotham-pics">
         <section><img src="./images/gotham1.jpeg" loading="lazy" alt="..." /></section>
         <section><img src="./images/gotham2.jpeg" loading="lazy" alt="..." /></section>
