--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,6 +34,12 @@
     </header>
     <main id="discover-main">
     <h1>Discover</h1><br>
+    <div id="gotham-info">
+        <h2>City Info</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, quisquam consequuntur. Sed, accusantium. 
+            Perferendis, soluta nam modi hic eos consectetur voluptates dignissimos? 
+            Quo, dignissimos. Ut eius fugit amet iste provident?</p>
+    </div>
     <div id="gotham-pics">
         <section><img src="./images/gotham1.jpeg" loading="lazy" alt="..." /></section>
         <section><img src="./images/gotham2.jpeg" loading="lazy" alt="..." /></section>
