--- a/hotel/contact.html
+++ b/hotel/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
-    <title>Local Temple Info</title>
+    <title>Contact</title>
 </head>
 <body>
     
