--- a/hotel/index.html
+++ b/hotel/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title>Temple Inn and Suites</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Temple Inn and Suites</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
