--- a/hotel/services.html
+++ b/hotel/services.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title>Services and Amenities</title>
 </head>
 <body>
