--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <header>
       <img src="me.jpg">
       <h1>Bradley Palmer</h1>
+      <h2>WDD 230: Assignment Portal</h2>
     </header>
-    <h2>WDD 230: Assignment Portal</h2>
+   
     <ul>
 
      
       <!-- This is a test to see if this edit works. Hello There! -->
 
-      <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
-      <li>Lesson 03: <a href="./lesson03/site-plan.html">Site Plan</a></li>
-      <li>Lesson 04: <a href="./chamber/index.html">Gotham Home Page</a></li>
+      <li>Lesson 02: <a href="">Link</a></li>
+      <li>Lesson 03: <a href="">Link</a></li>
+      <li>Lesson 04: <a href="">Link</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
       <li>Lesson 08: <a href="">Link</a></li>
-      <li>Lesson 09: <a href="./activity09/prophets.html">Prophets Activity</a></li>
+      <li>Lesson 09: <a href="">Link</a></li>
       <li>Lesson 10: <a href="">Link</a></li>
       <li>Lesson 11: <a href="">Link</a></li>
     </ul>
