--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
             <section class="spot2">
                 Spotlight 2
             </section>
-
+            <!-- hello -->
         </div>
     </main>
     <footer>
