--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
      
       <!-- This is a test to see if this edit works. Hello There! -->
 
-      <li>Lesson 02: <a href="">Link</a></li>
+      <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
+      <li><a href="./ranch/index.html">Ranch Activity</a></li>
       <li>Lesson 03: <a href="">Link</a></li>
       <li>Lesson 04: <a href="">Link</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
