--- a/ranch/index.html
+++ b/ranch/index.html
@@ -4,12 +4,17 @@
 <meta charset="utf-8">
 <meta name="description" content="Fill Me In">
 <meta name="author" content="John Doe">
+<meta name="viewport" content="width=device-width, intial-scale=1, maximum-scale=1">
 <title>Events: Christmas Ranch</title>
 
 
 
 <!-- STYLE SHEETS -->
-<link href="css/styles.css" rel="stylesheet">
+<link href="css/normalize.css" rel="stylesheet">
+<link href="css/small.css" rel="stylesheet">
+<link href="css/medium.css" rel="stylesheet">
+<link href="css/large.css" rel="stylesheet">
+
 
 </head>
 
@@ -32,8 +37,10 @@
 <main>
     
     <h1>Events</h1>
-    
+    <figure>
     <img src="images/cows.jpg" alt="Herford Cows">
+    <figcaption>Herford Cows</figcaption>
+    </figure>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel mauris pretium, tempus elit vel, condimentum ex. Aliquam tempus arcu vitae massa fermentum mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vel sapien gravida, consequat tellus non, rhoncus est. Maecenas tincidunt placerat posuere. Quisque elementum consequat augue vel finibus. Vivamus mi nibh, mattis sit amet sapien ut, posuere malesuada leo. Phasellus facilisis enim lorem, sed ultricies diam maximus in. Maecenas fermentum eu mi vitae pretium.</p>
 
     <div>
