--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <!-- This is a test to see if this edit works. Hello There! -->
 
       <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
-      <li>Activity 02<a href="./ranch/index.html">Ranch Activity</a></li>
+      <li>Activity 02: <a href="./ranch/index.html">Ranch Activity</a></li>
       <li>Lesson 03: <a href="./lesson03/site-plan.html">Chamber Site Plan</a></li>
+      <li>Activity 03: <a href="./"></a></li>
       <li>Lesson 04: <a href="">Link</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
