--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
       <li>Activity 02: <a href="./ranch/index.html">Ranch Activity</a></li>
       <li>Lesson 03: <a href="./lesson03/site-plan.html">Chamber Site Plan</a></li>
-      <li>Activity 03: <a href="./water_cycle/index.html"></a></li>
+      <li>Activity 03: <a href="./water_cycle/index.html">Water Cycle Activity</a></li>
       <li>Lesson 04: <a href="">Link</a></li>
       <li>Lesson 05: <a href="">Link</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
