--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Activity 02: <a href="./ranch/index.html">Ranch Activity</a></li>
       <li>Lesson 03: <a href="./lesson03/site-plan.html">Chamber Site Plan</a></li>
       <li>Activity 03: <a href="./water_cycle/index.html">Water Cycle Activity</a></li>
-      <li>Lesson 04: <a href="">Link</a></li>
+      <li>Lesson 04: <a href="./chamber/index.html">Link</a>Chamber Home Page</li>
       <li>Lesson 05: <a href="">Link</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
