--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li>Lesson 03: <a href="./lesson03/site-plan.html">Chamber Site Plan</a></li>
       <li>Activity 03: <a href="./water_cycle/index.html">Water Cycle Activity</a></li>
       <li>Lesson 04: <a href="./chamber/index.html">Link</a>Chamber Home Page</li>
-      <li>Lesson 05: <a href="">Link</a></li>
+      <li>Lesson 05: <a href="./BoM/bom.html">BoM Activity</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
       <li>Lesson 08: <a href="">Link</a></li>
