--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li>Lesson 05: <a href="./BoM/bom.html">BoM Activity</a></li>
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
-      <li>Lesson 08: <a href="">Link</a></li>
+      <li>Lesson 08: <a href="./activity08/act.html">Table Activity</a></li>
       <li>Lesson 09: <a href="">Link</a></li>
       <li>Lesson 10: <a href="">Link</a></li>
       <li>Lesson 11: <a href="">Link</a></li>
