--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>Lesson 06: <a href="">Link</a></li>
       <li>Lesson 07: <a href="">Link</a></li>
       <li>Lesson 08: <a href="./activity08/act.html">Table Activity</a></li>
-      <li>Lesson 09: <a href="">Link</a></li>
+      <li>Lesson 09: <a href="./weather/weather.html">Weather</a></li>
       <li>Lesson 10: <a href="">Link</a></li>
       <li>Lesson 11: <a href="">Link</a></li>
     </ul>
