--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,18 +44,22 @@
         <section id="weather">
             Weather
             <p>The current temperature in Gotham City is <span id="curr-temp"></span>&deg;F</p>
-            <span id="cond"></span></p>
-            <img src=""id="weather-icon"></p>
+            <span id="cond"></span>
+            <img id="weather-icon">
             <span id="speed"></span>
         </section>
         <section>
-            News Release
+            <p><strong>Buisness is Booming!</strong></p>
+            <p>With the recent decrease in criminal activity, thanks to the Batman and his associates,
+                buisnesses are performing better than ever. The chamber of commerce is seeking out and welcoming in
+                any new buisnesses to help expand Gotham's booming industry. 
+            </p>
         </section id="spotlight">
         <div class="spotlight">
-            <section>
+            <section class="spot1" id="spot1">
                 Spotlight 1
             </section>
-            <section class="spot2">
+            <section class="spot2" id="spot2">
                 Spotlight 2
             </section>
             <!-- hello -->
@@ -68,6 +72,7 @@
     </footer>
     <script src="./js/chamber.js"></script>
     <script src="./js/weather.js"></script>
+    <script src="./js/spolight.js"></script>
 </body>
 
 </html>
