--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,8 +27,8 @@
                 <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="./">Discover</a></li>
-                <li><a href="./">Contact</a></li>
+                <li><a href="./discover.html">Discover</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="date"></div>
