--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li>Lesson 08: <a href="./activity08/act.html">Table Activity</a></li>
       <li>Lesson 09: <a href="./weather/weather.html">Weather</a></li>
       <li>Lesson 10: <a href="./chamber/index.html">Chamber Home with Weather</a></li>
-      <li>Lesson 11: <a href="">Link</a></li>
+      <li>Lesson 11: <a href="./chamber/index.html">Full Chamber Site</a></li>
     </ul>
     <footer>
       <h1>&copy; .:|:. Bradley Palmer .:|:. Idaho</h1>
