--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,10 @@
     </header>
     <main class="main">
         <section id="hero">
-            Hero with site name and call to action
+            <p>Greetings from the Gotham City Chamber of Commerce! 
+                Join the booming industry in Gotham, today! We welcome all to our wonderful city.
+            </p><br><br><br>
+            <img src="./images/gotham2.jpeg" alt="Gotham City">
         </section>
         <section id="events">
             Events
