--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       <li>Lesson 09: <a href="./weather/weather.html">Weather</a></li>
       <li>Lesson 10: <a href="./chamber/index.html">Chamber Home with Weather</a></li>
       <li>Lesson 11: <a href="./chamber/index.html">Full Chamber Site</a></li>
+      <li>Lesson 11: <a href="./final/index.html">Final Project Site Plan</a></li>
+
     </ul>
     <footer>
       <h1>&copy; .:|:. Bradley Palmer .:|:. Idaho</h1>
