--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li>Lesson 09: <a href="./weather/weather.html">Weather</a></li>
       <li>Lesson 10: <a href="./chamber/index.html">Chamber Home with Weather</a></li>
       <li>Lesson 11: <a href="./chamber/index.html">Full Chamber Site</a></li>
-      <li>Lesson 11: <a href="./final/index.html">Final Project Site Plan</a></li>
+      <li>Lesson 11: <a href="./hotel/index.html">Final Project Site</a></li>
 
     </ul>
     <footer>
