--- a/weather/weather.html
+++ b/weather/weather.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <section id="weather">
-        Weather
-        <p>The current temperature in Gotham City is <span id="curr-temp"></span>&deg;F</p>
+        Redlands Weather
+        <p> <span id="curr-temp"></span>&deg;F</p>
         <span id="cond"></span></p>
         <img src=""id="weather-icon"></p>
         <span id="speed"></span>
