--- a/hotel/reservations.html
+++ b/hotel/reservations.html
@@ -11,6 +11,26 @@
     <title>Reservations</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Temple Inn and Suites</h1>
+        <nav class="navbar">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./temple.html">Temple</a></li>
+                </ul>
+                <div class="header-social">
+                    <a href="https://www.facebook.com/"><img src="../chamber/images/facebook.png" alt="facebook"></a>
+                    <a href="https://www.twitter.com"><img src="../chamber/images/twitter.png" alt="twitter"></a>
+                </div>
+            </nav>
+    </header>
+    <form action="#">
+        <label for="namer">Your Name</label>
+        <input type="text" name="namer" id="namer">
+        <label for="email">Email Address</label>
+        <input type="text" name="email" id="email">
+    </form>
 </body>
 </html>
