--- a/hotel/services.html
+++ b/hotel/services.html
@@ -11,6 +11,34 @@
     <title>Services and Amenities</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Temple Inn and Suites</h1>
+        <nav class="navbar">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./reservations.html">Reservations</a></li>
+                    <li><a href="./temple.html">Temple</a></li>
+                </ul>
+                <div class="header-social">
+                    <a href="https://www.facebook.com/"><img src="../chamber/images/facebook.png" alt="facebook"></a>
+                    <a href="https://www.twitter.com"><img src="../chamber/images/twitter.png" alt="twitter"></a>
+                </div>
+            </nav>
+    </header>
+    <p>We have many services to offer here. Take a look.</p>
+    <ul>
+        <li>Child Care while you attend your session</li>
+        <li>Changing rooms</li>
+        <li>Long term stay for temple missionaries</li>
+        <li>Wedding receptions</li>
+        <li>Continental Breakfast</li>
+        <li>In room kitchen</li>
+    </ul>
+    <footer>
+        <a href="https://www.google.com/maps/place/4800+Montgomery+Ln+%23300,+Bethesda,+MD+20814/@38.9832518,-77.0955318,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7c97b6b8f21f1:0x9a0b3cde14da0a60!8m2!3d38.9832518!4d-77.0955318">
+            4800 Montgomery Ln #300, Bethesda, MD 20814
+        </a>
+    </footer>
 </body>
 </html>
