--- a/hotel/temple.html
+++ b/hotel/temple.html
@@ -8,9 +8,31 @@
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    
     <title>Local Temple Info</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Temple Inn and Suites</h1>
+        <nav class="navbar">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./reservations.html">Reservations</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                </ul>
+                <div class="header-social">
+                    <a href="https://www.facebook.com/"><img src="../chamber/images/facebook.png" alt="facebook"></a>
+                    <a href="https://www.twitter.com"><img src="../chamber/images/twitter.png" alt="twitter"></a>
+                </div>
+            </nav>
+    </header>
+    <script src="./js/hotel.js"></script>
+    <div id="temple-list"></div>
+    <footer>
+        <a href="https://www.google.com/maps/place/4800+Montgomery+Ln+%23300,+Bethesda,+MD+20814/@38.9832518,-77.0955318,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7c97b6b8f21f1:0x9a0b3cde14da0a60!8m2!3d38.9832518!4d-77.0955318">
+            4800 Montgomery Ln #300, Bethesda, MD 20814
+        </a>
+    </footer>
 </body>
 </html>
